build(gradle): Fix running `OrtConfigurationTest` on Windows
This prevents errors like

    Unable to make field private static final java.util.Map
    java.lang.ProcessEnvironment.theCaseInsensitiveEnvironment accessible:
    module java.base does not "opens java.lang" to unnamed module @673fdbc

when running `OrtConfigurationTest` on Windows with Temurin JDK 21.

Signed-off-by: Sebastian Schuberth <sebastian@doubleopen.org>